--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </div>
           <ul class="nav__collection">
             <li class="nav__item">
-              <a href="#">Главная</a>
+              <a href="">Главная</a>
             </li>
             <li class="nav__item">
               <a href="#">Наши проекты</a>
@@ -42,7 +42,7 @@
                 двери.  Настолько прозрачных сделок с Китаем вы еще не
                 осуществляли.
               </p>
-              <div><button>Узнать больше</button></div>
+              <div class="hero__btn"><button>Узнать больше</button></div>
             </div>
             <div class="hero__img">
               <img src="./assets/adir-Cargo-Insurance 1.png" alt="" />
@@ -53,74 +53,306 @@
       <section class="serc">
         <div class="container">
           <div class="serc__wrap">
-            <div  class="sirc__card once">
-              <div class="card__img"><img src="./assets/icon.png" alt="" /></div>
-              <b>Поиск производителей по товару
-                </b>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p>
+            <div class="sirc__card once">
+              <div class="card__img">
+                <img src="./assets/icon.png" alt="" />
+              </div>
+              <div class="sirc__text">
+                <b>Поиск производителей по товару </b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod incididunt ut.
+                </p>
+              </div>
             </div>
             <div class="sirc__card second">
               <div><img src="./assets/icon (1).png" alt="" /></div>
-              <b>Поиск конкретного производителя
-                </b>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p>
+              <div class="sirc__text">
+                <b>Поиск производителей по товару </b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod incididunt ut.
+                </p>
+              </div>
             </div>
             <div class="sirc__card">
               <div><img src="./assets/icon (2).png" alt="" /></div>
-              <b>Доставка образцов товаров
-                </b>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p>
+              <div class="sirc__text">
+                <b>Поиск производителей по товару </b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod incididunt ut.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </section>
       <section class="truck">
         <div class="container">
-            <div class="truck__wrap">
-                 
+          <b class="b">Почему с нами выгоднее?</b>
+          <div class="truck__wrap">
+            <div class="truck__bg">
+              <b>Почему с нами выгоднее?</b>
             </div>
+          </div>
         </div>
       </section>
       <section class="cards">
         <div class="container">
-            <div class="card__wrap">
-                <div class="cards__card">
-                    <div class="cards__img" >
-                        <img src="./assets/icon (3).png" alt="">
-                    </div>
-                    <div class="cards__text">
-                        <b>Lorem ipsum dolor sit amet</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
-                    </div>
-                </div>
-                <div class="cards__card">
-                    <div class="cards__img" >
-                        <img src="./assets/icon (4).png" alt="">
-                    </div>
-                    <div class="cards__text">
-                        <b>Lorem ipsum dolor sit amet</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
-                    </div>
-                </div>
-                <div class="cards__card">
-                    <div class="cards__img" >
-                        <img src="./assets/icon (5).png" alt="">
-                    </div>
-                    <div class="cards__text">
-                        <b>Lorem ipsum dolor sit amet</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
-                    </div>
-                </div>
-                <div class="cards__card">
-                    <div class="cards__img" >
-                        <img src="./assets/icon (6).png" alt="">
-                    </div>
-                    <div class="cards__text">
-                        <b>Lorem ipsum dolor sit amet</b>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
-                    </div>
-                </div>
+          <div class="card__wrap">
+            <div class="cards__card">
+              <div class="cards__img">
+                <img src="./assets/icon (3).png" alt="" />
+              </div>
+              <div class="cards__text">
+                <b>Lorem ipsum dolor sit amet</b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod ut.
+                </p>
+              </div>
             </div>
+            <div class="cards__card">
+              <div class="cards__img">
+                <img src="./assets/icon (4).png" alt="" />
+              </div>
+              <div class="cards__text">
+                <b>Lorem ipsum dolor sit amet</b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod ut.
+                </p>
+              </div>
+            </div>
+            <div class="cards__card">
+              <div class="cards__img">
+                <img src="./assets/icon (5).png" alt="" />
+              </div>
+              <div class="cards__text">
+                <b>Lorem ipsum dolor sit amet</b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod ut.
+                </p>
+              </div>
+            </div>
+            <div class="cards__card">
+              <div class="cards__img">
+                <img src="./assets/icon (6).png" alt="" />
+              </div>
+              <div class="cards__text">
+                <b>Lorem ipsum dolor sit amet</b>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod ut.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="work">
+        <div class="container">
+          <div class="work__wrap">
+            <div class="work__desc">
+              <b>Выполненные работы</b>
+              <p>
+                Мы собрали информацию по грузам, которые мы уже доставили. У нас
+                специальный подход к каждому виду товаров.
+              </p>
+            </div>
+
+            <div class="work__cards">
+              <div class="work__card">
+                <div>
+                  <img src="./assets/Rectangle 13 (1).png" alt="" />
+                </div>
+                <div class="card__text">
+                  <b>Станки и оборудование</b>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod ut.
+                  </p>
+                  <b>20 000 руб.</b>
+                </div>
+              </div>
+              <div class="work__card">
+                <div>
+                  <img src="./assets/Rectangle 13 (2).png" alt="" />
+                </div>
+                <div class="card__text">
+                  <b>Станки и оборудование</b>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod ut.
+                  </p>
+                  <b>16 000 руб.</b>
+                </div>
+              </div>
+              <div class="work__card">
+                <div>
+                  <img src="./assets/Rectangle 13 (1).png" alt="" />
+                </div>
+                <div class="card__text">
+                  <b>Станки и оборудование</b>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod ut.
+                  </p>
+                  <b>20 000 руб.</b>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="tabel">
+        <div class="container ">
+          <div class="wrap">
+            <div class="tabel__desc">
+            <b>Привлеченные клиенты</b>
+          </div>
+          <div class="tabel_wrap">
+            <div class="tabel__logo">
+              <div><img  src="./assets/Group (6).png" alt="" /></div>
+              <p>
+                ООО "ПДВ" ИНН 7329023100 КПП 732901001 433405, Ульяновская обл.,
+                Территория Портовой особой Экономической зоны, Проезд Первых
+                Резидентов 3  Телефон: +7 8422 99 666 5 e-mail: info@pdv.ooo
+              </p>
+            </div>
+            <table>
+              <thead>
+                <th>Фото</th>
+                <th>Название</th>
+                <th>Производитель</th>
+                <th>Контакт</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><img  src="./assets/Rectangle 38.png" alt="" /></td>
+                  <td>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod ut.
+                    </p>
+                    <b>120 000 руб.</b>
+                  </td>
+                  <td>
+                    <b>Завод “Hlobalkhim”</b>
+                    <p>
+                      г. Москва, проспект Кутузовский, д. 12 стр. 1 этаж, пом. 1
+                    </p>
+                    <div class="star">
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (10).png" alt="" />
+                    </div>
+                  </td>
+                  <td>
+                    <b>Коваль Иван Борисович</b>
+                    <p>Руководитель отдела поставок</p>
+                    <strong>+ 7 (495) 765 33 22</strong>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="./assets/Rectangle 38.png" alt="" /></td>
+                  <td>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod ut.
+                    </p>
+                    <b>120 000 руб.</b>
+                  </td>
+                  <td>
+                    <b>Завод “Hlobalkhim”</b>
+                    <p>
+                      г. Москва, проспект Кутузовский, д. 12 стр. 1 этаж, пом. 1
+                    </p>
+                    <div class="star">
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (10).png" alt="" />
+                    </div>
+                  </td>
+                  <td>
+                    <b>Коваль Иван Борисович</b>
+                    <p>Руководитель отдела поставок</p>
+                    <strong>+ 7 (495) 765 33 22</strong>
+                  </td>
+                </tr>
+                <tr>
+                  <td><img src="./assets/Rectangle 38.png" alt="" /></td>
+                  <td>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod ut.
+                    </p>
+                    <b>120 000 руб.</b>
+                  </td>
+                  <td>
+                    <b>Завод “Hlobalkhim”</b>
+                    <p>
+                      г. Москва, проспект Кутузовский, д. 12 стр. 1 этаж, пом. 1
+                    </p>
+                    <div class="star">
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (9).png" alt="" />
+                      <img src="./assets/Vector (10).png" alt="" />
+                    </div>
+                  </td>
+                  <td>
+                    <b>Коваль Иван Борисович</b>
+                    <p>Руководитель отдела поставок</p>
+                    <strong>+ 7 (495) 765 33 22</strong>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          </div>
+
+          
+        </div>
+      </section>
+      <section class="step">
+        <div class="container">
+          <div class="step__wrap">
+            <b>Этапы поставки </b>
+            <div class="step__cards">
+              <div class="step__card">
+                <div><img src="./assets/Rectangle 32.png" alt="">
+              </div>
+              <div class="step__text">
+                <div class="b"><b>Предложение от продавца</b></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in. </p>
+              </div>
+              </div>
+              <div class="step__card">
+                <div><img src="./assets/Rectangle 32 (1).png" alt="">
+              </div>
+              <div class="step__text">
+                <div class="b"><b>Предложение от продавца</b></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in. </p>
+              </div>
+              </div>
+              <div class="step__card">
+                <div><img src="./assets/Rectangle 32.png" alt="">
+              </div>
+              <div class="step__text">
+<div class="b"><b>Предложение от продавца</b></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc scelerisque viverra mauris in. </p>
+              </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
